--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "sandboxed-module": ">=0.1.2",
     "should": ">=0.5.1",
     "sinon": ">=1.3.1",
-    "commander": ">=0.5.2"
+    "commander": ">=0.5.2",
+    "nodetime": "~0.8.11"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha -R tap && node_modules/mocha/bin/mocha -R tap --ignore-leaks test/functional/test.js",
