--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "express": "~3.1.0",
     "swig": "git://github.com/peterbraden/swig",
     "cookie": "0.0.5",
-    "socket.io": "~0.9.13"
+    "socket.io": "~0.9.13",
+    "nodetime": "~0.8.11"
   },
   "devDependencies": {
     "mocha": ">=0.11.0",
@@ -44,8 +45,7 @@
     "sandboxed-module": ">=0.1.2",
     "should": ">=0.5.1",
     "sinon": ">=1.3.1",
-    "commander": ">=0.5.2",
-    "nodetime": "~0.8.11"
+    "commander": ">=0.5.2"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha -R tap && node_modules/mocha/bin/mocha -R tap --ignore-leaks test/functional/test.js",
