--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "swig": "git://github.com/peterbraden/swig",
     "cookie": "0.0.5",
     "socket.io": "~0.9.13",
-    "nodetime": "~0.8.11"
+    "nodefly": "*"
   },
   "devDependencies": {
     "mocha": ">=0.11.0",
